# pyxkcd

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-dev.txt  tests.py
.github/workflows/: black.yml  unit-tests.yml
apipdocs/: installation.rst
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  quickstart.rst  requirements-docs.txt
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/html/_static/: language_data.js
docs/_templates/: layout.html
examples/: asyncexample.py  qsexample.py
xkcd/: comic.py
