[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xkcd.py"
description = "A simple, easy-to-use xkcd API wrapper!"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["xkcd", "api", "api wrapper"]
license = {text = "MIT License"}
classifiers = [
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "httpx",
    'importlib-metadata; python_version>"3.6"',
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "xkcd.__version__"}